--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+    "lint": "npm run prettier && npm run eslint",
+    "eslint": "eslint \"{src}/**/*.ts\"",
+    "eslint:fix": "npm run eslint -- --fix",
+    "prettier": "prettier --check \"{src}/**/*.ts\"",
+    "prettier:fix": "prettier --write \"{src}/**/*.ts\""
   },
   "devDependencies": {
     "@types/node": "^24.2.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.3",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
